--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stripe/stripe-js": "^1.23.0",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
+    "cookies-next": "^2.1.1",
     "dayjs": "^1.10.7",
     "install": "^0.13.0",
     "mongoose": "^5.12.11",
